@@ -3,19 +3,19 @@ Date: Tue, 11 Jun 2013 20:54:09 +0200
 Subject: javaewah-compatibility
 
 ---
- .../eclipse/jgit/internal/storage/file/InflatingBitSetTest.java  |    2 +-
- .../org/eclipse/jgit/internal/storage/file/StoredBitmapTest.java |    2 +-
- org.eclipse.jgit/META-INF/MANIFEST.MF                            |    2 +-
- .../eclipse/jgit/internal/storage/file/BasePackBitmapIndex.java  |    2 +-
- .../src/org/eclipse/jgit/internal/storage/file/BitSet.java       |    2 +-
- .../org/eclipse/jgit/internal/storage/file/BitmapIndexImpl.java  |    4 ++--
- .../org/eclipse/jgit/internal/storage/file/InflatingBitSet.java  |    6 +++---
- .../org/eclipse/jgit/internal/storage/file/PackBitmapIndex.java  |    4 ++--
- .../jgit/internal/storage/file/PackBitmapIndexBuilder.java       |    2 +-
- .../jgit/internal/storage/file/PackBitmapIndexRemapper.java      |    4 ++--
- .../eclipse/jgit/internal/storage/file/PackBitmapIndexV1.java    |    2 +-
- .../jgit/internal/storage/file/PackBitmapIndexWriterV1.java      |    2 +-
- .../jgit/internal/storage/pack/PackWriterBitmapPreparer.java     |    2 +-
+ .../org/eclipse/jgit/internal/storage/file/InflatingBitSetTest.java | 2 +-
+ .../org/eclipse/jgit/internal/storage/file/StoredBitmapTest.java    | 2 +-
+ org.eclipse.jgit/META-INF/MANIFEST.MF                               | 2 +-
+ .../org/eclipse/jgit/internal/storage/file/BasePackBitmapIndex.java | 2 +-
+ .../src/org/eclipse/jgit/internal/storage/file/BitSet.java          | 2 +-
+ .../src/org/eclipse/jgit/internal/storage/file/BitmapIndexImpl.java | 4 ++--
+ .../src/org/eclipse/jgit/internal/storage/file/InflatingBitSet.java | 6 +++---
+ .../src/org/eclipse/jgit/internal/storage/file/PackBitmapIndex.java | 4 ++--
+ .../eclipse/jgit/internal/storage/file/PackBitmapIndexBuilder.java  | 2 +-
+ .../eclipse/jgit/internal/storage/file/PackBitmapIndexRemapper.java | 4 ++--
+ .../org/eclipse/jgit/internal/storage/file/PackBitmapIndexV1.java   | 2 +-
+ .../eclipse/jgit/internal/storage/file/PackBitmapIndexWriterV1.java | 2 +-
+ .../jgit/internal/storage/pack/PackWriterBitmapPreparer.java        | 2 +-
  13 files changed, 18 insertions(+), 18 deletions(-)
 
 diff --git a/org.eclipse.jgit.test/tst/org/eclipse/jgit/internal/storage/file/InflatingBitSetTest.java b/org.eclipse.jgit.test/tst/org/eclipse/jgit/internal/storage/file/InflatingBitSetTest.java
@@ -45,14 +45,14 @@ index dc4c25e..0adf3e4 100644
  import org.eclipse.jgit.internal.storage.file.BasePackBitmapIndex.StoredBitmap;
  import org.eclipse.jgit.lib.ObjectId;
 diff --git a/org.eclipse.jgit/META-INF/MANIFEST.MF b/org.eclipse.jgit/META-INF/MANIFEST.MF
-index 35a4994..d6eb1f8 100644
+index 034c199..2edbc19 100644
 --- a/org.eclipse.jgit/META-INF/MANIFEST.MF
 +++ b/org.eclipse.jgit/META-INF/MANIFEST.MF
-@@ -39,7 +39,7 @@ Export-Package: org.eclipse.jgit.api;version="3.0.0",
+@@ -49,7 +49,7 @@ Export-Package: org.eclipse.jgit.api;version="3.1.0",
  Bundle-ActivationPolicy: lazy
  Bundle-RequiredExecutionEnvironment: J2SE-1.5
  Require-Bundle: com.jcraft.jsch;bundle-version="[0.1.37,0.2.0)"
--Import-Package: javaewah;version="0.5.6",
+-Import-Package: javaewah;version="[0.5.6,1.0.0)",
 +Import-Package: com.googlecode.javaewah,
   javax.crypto,
   javax.net.ssl,
