@@ -1,6 +1,7 @@
 jgit (3.1.0-1) UNRELEASED; urgency=low
 
   * New Upstream release.
+  * Refreshed d/patches/javaewah-compatibility.patch.
 
  -- Jakub Adam <jakub.adam@ktknet.cz>  Tue, 08 Oct 2013 19:57:23 +0200
 
